--- a/students/umienchuk_oksana/index.html
+++ b/students/umienchuk_oksana/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-
+    <h1>
+        New repository
+    </h1>
+    <p>
+        Здобуття нових навичок
+    </p>
 </body>
 
 </html>
