--- a/students/tiselko_iryna/index.html
+++ b/students/tiselko_iryna/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>VSite ITiseko</title>
 </head>
 <body>
-    <h1>First Page</h1>
+    <header>
+        <!-- pill-nav -->
+        <div class="pill-nav">
+            <a class="active" href="/index.html">На головну</a>
+            <a href="#">Про мене</a>
+            <a href="#">Проєкти</a>
+            <a href="#">Контакти</a>
+        </div>
+    </header>
+
+    <section>
+        <div class="main-image">
+            <img src="#" alt="main_page_img" width="1920">
+            <div class="image-text">
+              <h1>&lt;h1&gt;Мене звуть Ірина Тіселько&lt;/h1&gt;</h1>
+              <h2>І я веб-розробниця</h2>
+              <q cite="The_Rolling_Stones">Дозвольте мені представитися... (c)</q><br>
+            </div>
+          </div>
+    </section>
+
+    <footer>
+        <!-- Lang button -->
+        <div>
+            <button><a href="#">Укр</a></button>
+            <button><a href="#">Анг</a></button>
+        </div>
+    </footer>
 </body>
 </html>
