add abt content

--- a/students/tiselko_iryna/index.html
+++ b/students/tiselko_iryna/index.html
@@ -9,7 +9,7 @@
     <header>
         <!-- pill-nav -->
         <div class="pill-nav">
-            <a class="active" href="/index.html">На головну</a>
+            <a class="active" href="#">На головну</a>
             <a href="#">Про мене</a>
             <a href="#">Проєкти</a>
             <a href="#">Контакти</a>
