--- a/students/tiselko_iryna/pages/about.html
+++ b/students/tiselko_iryna/pages/about.html
@@ -6,6 +6,88 @@
     <title>Про мене</title>
 </head>
 <body>
-    
+    <header>
+        <!-- Dropdown menu -->
+        <div class="dropdown">
+            <button class="dropbtn">../</button>
+            <div class="dropdown-content">
+                <a href="#">На головну</a>
+                <a href="#">Проєкти</a>
+                <a href="#">Контакти</a>
+            </div>
+        </div>
+
+        <h1>Про мене</h1>
+    </header>
+
+    <section>
+        <ul>
+            <li><a href="#lang">Мова</a></li>
+            <li><a href="#education">Освіта</a></li>
+            <li><a href="#hs">Професійні навички</a></li>
+            <li><a href="#ss">Особисті навички</a></li>
+        </ul>
+
+        <aside id="about">
+            <figure>
+                <img src="#" alt="Iryna Tiselko" width="700" height="707">
+            </figure>
+            <div>
+                <h2>Цікаві факти:</h2>
+                <ul>
+                    <li>Просто обожнюю йогу та фентезі книжки</li>
+                    <li>Завжди заспокоююсь розв&apos;язуючи Суддоку</li>
+                    <li>У 2012 звершила курси Амадеус, що означає що я сертифікований авіаменеджер</li>
+                </ul>
+            </div>
+        </aside>
+
+        <article>
+            <h2 id="lang">Мова</h2>
+            <ul>
+                <li>Англійська - Upper-intermediatet</li>
+                <li>Польська - Beginner</li>
+                <li>Українська</li>
+            </ul>
+        </article>
+
+        <article>
+            <h2 id="education">Освіта</h2>
+            <ul>
+                <li>Одеський Національний Економічний Університет, (2009 - 2014, Бакалавр)</li>
+                <li>Cases Media, 2022</li>
+                <li>Beetroot Academy, 2023</li>
+            </ul>
+        </article>
+
+        <article>
+            <h2 id="hs">Професійні навички</h2>
+            <ul>
+                <li>HTML, CSS</li>
+                <li>ES6</li>
+                <li>DOM, OOP</li>
+                <li>React</li>
+                <li>Vue.js</li>
+            </ul>
+        </article>
+
+        <article>
+            <h2 id="ss">Особисті навички</h2>
+            <ul>
+                <li>Навички тайм-менеджменту</li>
+                <li>Вміння пристосовуватися</li>
+                <li>Комунікативність</li>
+                <li>Самодисципліна</li>
+            </ul>
+        </article>
+    </section>
+
+    <footer>
+        <!-- Lang button -->
+        <div>
+            <button><a href="#">Укр</a></button>
+            <button><a href="#">Анг</a></button>
+        </div>
+    </footer>
 </body>
 </html>
