--- a/students/tiselko_iryna/pages/contacts.html
+++ b/students/tiselko_iryna/pages/contacts.html
@@ -3,9 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <title>Контакти</title>
 </head>
 <body>
-    
+    <header>
+        <!-- Dropdown menu -->
+        <div class="dropdown">
+            <button class="dropbtn">../</button>
+            <div class="dropdown-content">
+                <a href="#">На головну</a>
+                <a href="#">Про мене</a>
+                <a href="#">Проєкти</a>
+            </div>
+        </div>
+    </header>
+
+    <section>
+        <div class="line"></div>
+        <p>Давайте поспілкуємося і побачимо, що дивовижного ми зможемо створити разом</p>
+        <p>Напишіть мені на почту або зв'яжіться зі мною через мої соціальні мережі <br> Буду щиро рада Вас почути</p>
+
+        <div>
+            <a href="https://www.linkedin.com/" target="_blank"><i class="fa-brands fa-linkedin-in fa-lg" style="color: #000000;"></i></a>
+            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-lg" style="color: #000000;"></i></a>
+            <a href="https://github.com/" target="_blank"><i class="fa-brands fa-github fa-lg" style="color: #000000;"></i></a>
+            <a href="https://web.telegram.org/" target="_blank"><i class="fa-brands fa-telegram fa-lg" style="color: #000000;"></i></a>
+        </div>
+
+        <div>
+            <a href="mailto:my.email@gmail.com">Напишіть мені</a>
+        </div>
+    </section>
+
+    <footer>
+        <!-- Lang button -->
+        <div>
+            <button><a href="#">Укр</a></button>
+            <button><a href="#">Анг</a></button>
+        </div>
+    </footer>
 </body>
 </html>
