add projects content

--- a/students/tiselko_iryna/pages/projects.html
+++ b/students/tiselko_iryna/pages/projects.html
@@ -6,6 +6,52 @@
     <title>Проєкти</title>
 </head>
 <body>
-    
+    <header>
+        <!-- Dropdown menu -->
+        <div class="dropdown">
+            <button class="dropbtn">../</button>
+            <div class="dropdown-content">
+                <a href="#">На головну</a>
+                <a href="#">Про мене</a>
+                <a href="#">Контакти</a>
+            </div>
+        </div>
+
+        <h1>Проєкти</h1>
+    </header>
+
+    <section>
+        <p>Тут буде опис першого проэкту.</p>
+        <figure>
+            <a href="#" target="_blank">
+                <img src="#" alt="Brain" width="500" height="333">
+            </a>
+            <figcaption>Проєкт 1</figcaption>
+        </figure>
+
+        <p>Тут буде опис другого проэкту.</p>
+        <figure>
+            <a href="#" target="_blank">
+                <img src="#" alt="Health" width="500" height="333">
+            </a>
+            <figcaption>Проєкт 2</figcaption>
+        </figure>
+
+        <p>Тут буде опис третэго проэкту.</p>
+        <figure>
+            <a href="#" target="_blank">
+                <img src="#" alt="Stress" width="500" height="333">
+            </a>
+            <figcaption>Проєкт 3</figcaption>
+        </figure>
+    </section>
+
+    <footer>
+        <!-- Lang button -->
+        <div>
+            <button><a href="#">Укр</a></button>
+            <button><a href="#">Анг</a></button>
+        </div>
+    </footer>
 </body>
 </html>
