--- a/students/tiselko_iryna/index.html
+++ b/students/tiselko_iryna/index.html
@@ -9,16 +9,16 @@
     <header>
         <!-- pill-nav -->
         <div class="pill-nav">
-            <a class="active" href="#">На головну</a>
-            <a href="#">Про мене</a>
-            <a href="#">Проєкти</a>
-            <a href="#">Контакти</a>
+            <a class="active" href="./index.html">На головну</a>
+            <a href="./pages/about.html">Про мене</a>
+            <a href="./pages/projects.html">Проєкти</a>
+            <a href="./pages/contacts.html">Контакти</a>
         </div>
     </header>
 
     <section>
         <div class="main-image">
-            <img src="#" alt="main_page_img" width="1920">
+            <img src="./images/main/pexels-olena-bohovyk-1772123.jpg" alt="main_page_img" width="1920">
             <div class="image-text">
               <h1>&lt;h1&gt;Мене звуть Ірина Тіселько&lt;/h1&gt;</h1>
               <h2>І я веб-розробниця</h2>
