--- a/students/tiselko_iryna/pages/about.html
+++ b/students/tiselko_iryna/pages/about.html
@@ -11,9 +11,9 @@
         <div class="dropdown">
             <button class="dropbtn">../</button>
             <div class="dropdown-content">
-                <a href="#">На головну</a>
-                <a href="#">Проєкти</a>
-                <a href="#">Контакти</a>
+                <a href="../index.html">На головну</a>
+                <a href="../pages/projects.html">Проєкти</a>
+                <a href="../pages/contacts.html">Контакти</a>
             </div>
         </div>
 
@@ -30,7 +30,7 @@
 
         <aside id="about">
             <figure>
-                <img src="#" alt="Iryna Tiselko" width="700" height="707">
+                <img src="../images/about/photo_5233642170047646316_y.jpg" alt="Iryna Tiselko" width="700" height="707">
             </figure>
             <div>
                 <h2>Цікаві факти:</h2>
