links on contacts

--- a/students/tiselko_iryna/pages/contacts.html
+++ b/students/tiselko_iryna/pages/contacts.html
@@ -12,9 +12,9 @@
         <div class="dropdown">
             <button class="dropbtn">../</button>
             <div class="dropdown-content">
-                <a href="#">На головну</a>
-                <a href="#">Про мене</a>
-                <a href="#">Проєкти</a>
+                <a href="../index.html">На головну</a>
+                <a href="./about.html">Про мене</a>
+                <a href="./projects.html">Проєкти</a>
             </div>
         </div>
     </header>
