links on projects

--- a/students/tiselko_iryna/pages/projects.html
+++ b/students/tiselko_iryna/pages/projects.html
@@ -11,9 +11,9 @@
         <div class="dropdown">
             <button class="dropbtn">../</button>
             <div class="dropdown-content">
-                <a href="#">На головну</a>
-                <a href="#">Про мене</a>
-                <a href="#">Контакти</a>
+                <a href="../index.html">На головну</a>
+                <a href="./about.html">Про мене</a>
+                <a href="./contacts.html">Контакти</a>
             </div>
         </div>
 
@@ -24,7 +24,7 @@
         <p>Тут буде опис першого проэкту.</p>
         <figure>
             <a href="#" target="_blank">
-                <img src="#" alt="Brain" width="500" height="333">
+                <img src="../images/projets/brain.jpeg" alt="Brain" width="500" height="333">
             </a>
             <figcaption>Проєкт 1</figcaption>
         </figure>
@@ -32,7 +32,7 @@
         <p>Тут буде опис другого проэкту.</p>
         <figure>
             <a href="#" target="_blank">
-                <img src="#" alt="Health" width="500" height="333">
+                <img src="../images/projets/health.jpg" alt="Health" width="500" height="333">
             </a>
             <figcaption>Проєкт 2</figcaption>
         </figure>
@@ -40,7 +40,7 @@
         <p>Тут буде опис третэго проэкту.</p>
         <figure>
             <a href="#" target="_blank">
-                <img src="#" alt="Stress" width="500" height="333">
+                <img src="../images/projets/stress.jpeg" alt="Stress" width="500" height="333">
             </a>
             <figcaption>Проєкт 3</figcaption>
         </figure>
