--- a/students/tiselko_iryna/english version/about_eng.html
+++ b/students/tiselko_iryna/english version/about_eng.html
@@ -11,9 +11,9 @@
         <div class="dropdown">
             <button class="dropbtn">../</button>
             <div class="dropdown-content">
-                <a href="#">Main</a>
-                <a href="#">Projects</a>
-                <a href="#">Contacts</a>
+                <a href="./main.html">Main</a>
+                <a href="./projects_eng.html">Projects</a>
+                <a href="./contacts_eng.html">Contacts</a>
             </div>
         </div>
 
@@ -30,7 +30,7 @@
 
         <aside id="about">
             <figure>
-                <img src="#" alt="Iryna Tiselko" width="700" height="707">
+                <img src="../images/about/photo_5233642170047646316_y.jpg" alt="Iryna Tiselko" width="700" height="707">
             </figure>
             <div>
                 <h2>Interesting facts:</h2>
