--- a/students/tiselko_iryna/english version/contacts_eng.html
+++ b/students/tiselko_iryna/english version/contacts_eng.html
@@ -12,9 +12,9 @@
         <div class="dropdown">
             <button class="dropbtn">../</button>
             <div class="dropdown-content">
-                <a href="#">Main</a>
-                <a href="#">About</a>
-                <a href="#">Projects</a>
+                <a href="./main.html">Main</a>
+                <a href="./about_eng.html">About</a>
+                <a href="./projects_eng.html">Projects</a>
             </div>
         </div>
     </header>
