links on eng main

--- a/students/tiselko_iryna/english version/main.html
+++ b/students/tiselko_iryna/english version/main.html
@@ -10,15 +10,15 @@
         <!-- pill-nav -->
         <div class="pill-nav">
             <a class="active" href="#">Home</a>
-            <a href="#">About</a>
-            <a href="#">Projects</a>
-            <a href="#">Contacts</a>
+            <a href="./about_eng.html">About</a>
+            <a href="./projects_eng.html">Projects</a>
+            <a href="./contacts_eng.html">Contacts</a>
         </div>
     </header>
 
     <section>
         <div class="main-image">
-            <img src="#" alt="main_page_img" width="1920">
+            <img src="../images/main/pexels-olena-bohovyk-1772123.jpg" alt="main_page_img" width="1920">
             <div class="image-text">
               <h1>&lt;h1&gt;I	&apos;m Iryna Tiselko&lt;/h1&gt;</h1>
               <h2>And I&apos;m a Frontend Developer</h2>
