links on eng projects

--- a/students/tiselko_iryna/english version/projects_eng.html
+++ b/students/tiselko_iryna/english version/projects_eng.html
@@ -11,9 +11,9 @@
         <div class="dropdown">
             <button class="dropbtn">../</button>
             <div class="dropdown-content">
-                <a href="#">Main</a>
-                <a href="#">About</a>
-                <a href="#">Contacts</a>
+                <a href="./main.html">Main</a>
+                <a href="./about_eng.html">About</a>
+                <a href="./about_eng.html">Contacts</a>
             </div>
         </div>
 
@@ -24,7 +24,7 @@
         <p>Information about first project</p>
         <figure>
             <a href="#" target="_blank">
-                <img src="/Images/projets/brain.jpeg" alt="Brain" width="500" height="333">
+                <img src="../images/projets/brain.jpeg" alt="Brain" width="500" height="333">
             </a>
             <figcaption>Project 1</figcaption>
         </figure>
@@ -32,7 +32,7 @@
         <p>Information about second project</p>
         <figure>
             <a href="#" target="_blank">
-                <img src="/Images/projets/health.jpg" alt="Health" width="500" height="333">
+                <img src="../images/projets/health.jpg" alt="Health" width="500" height="333">
             </a>
             <figcaption>Project 2</figcaption>
         </figure>
@@ -40,7 +40,7 @@
         <p>Information about third project</p>
         <figure>
             <a href="#" target="_blank">
-                <img src="/Images/projets/stress.jpeg" alt="Stress" width="500" height="333">
+                <img src="../images/projets/stress.jpeg" alt="Stress" width="500" height="333">
             </a>
             <figcaption>Project 3</figcaption>
         </figure>
