lang btn on ukr pages

--- a/students/tiselko_iryna/pages/about.html
+++ b/students/tiselko_iryna/pages/about.html
@@ -85,8 +85,8 @@
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="#">Укр</a></button>
-            <button><a href="#">Анг</a></button>
+            <button><a href="./about.html">Укр</a></button>
+            <button><a href="../english version/about_eng.html">Анг</a></button>
         </div>
     </footer>
 </body>
