--- a/students/tiselko_iryna/pages/contacts.html
+++ b/students/tiselko_iryna/pages/contacts.html
@@ -39,8 +39,8 @@
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="#">Укр</a></button>
-            <button><a href="#">Анг</a></button>
+            <button><a href="./contacts.html">Укр</a></button>
+            <button><a href="../english version/contacts_eng.html">Анг</a></button>
         </div>
     </footer>
 </body>
