--- a/students/tiselko_iryna/pages/projects.html
+++ b/students/tiselko_iryna/pages/projects.html
@@ -49,8 +49,8 @@
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="#">Укр</a></button>
-            <button><a href="#">Анг</a></button>
+            <button><a href="./projects.html">Укр</a></button>
+            <button><a href="../english version/projects_eng.html">Анг</a></button>
         </div>
     </footer>
 </body>
