--- a/students/tiselko_iryna/index.html
+++ b/students/tiselko_iryna/index.html
@@ -30,8 +30,8 @@
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="#">Укр</a></button>
-            <button><a href="#">Анг</a></button>
+            <button><a href="./index.html">Укр</a></button>
+            <button><a href="./english version/main.html">Анг</a></button>
         </div>
     </footer>
 </body>
