btn lang on eng pages

--- a/students/tiselko_iryna/english version/about_eng.html
+++ b/students/tiselko_iryna/english version/about_eng.html
@@ -86,8 +86,8 @@
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="#">UKR</a></button>
-            <button><a href="#">ENG</a></button>
+            <button><a href="../pages/about.html">UKR</a></button>
+            <button><a href="./about_eng.html">ENG</a></button>
         </div>
     </footer>
 </body>
