--- a/students/tiselko_iryna/english version/contacts_eng.html
+++ b/students/tiselko_iryna/english version/contacts_eng.html
@@ -39,8 +39,8 @@
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="#">UKR</a></button>
-            <button><a href="#">ENG</a></button>
+            <button><a href="../pages/contacts.html">UKR</a></button>
+            <button><a href="./contacts_eng.html">ENG</a></button>
         </div>
     </footer>
 </body>
