--- a/students/tiselko_iryna/english version/projects_eng.html
+++ b/students/tiselko_iryna/english version/projects_eng.html
@@ -49,8 +49,8 @@
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="#">UKR</a></button>
-            <button><a href="#">ENG</a></button>
+            <button><a href="../pages/projects.html">UKR</a></button>
+            <button><a href="./projects_eng.html">ENG</a></button>
         </div>
     </footer>
 </body>
