--- a/students/tiselko_iryna/english version/main.html
+++ b/students/tiselko_iryna/english version/main.html
@@ -30,8 +30,8 @@
     <footer>
         <!-- Lang button -->
         <div>
-            <button><a href="#">UKR</a></button>
-            <button><a href="#">ENG</a></button>
+            <button><a href="../index.html">UKR</a></button>
+            <button><a href="./main.html">ENG</a></button>
         </div>
     </footer>
 </body>
