change links on eng prjts

--- a/students/tiselko_iryna/english version/projects_eng.html
+++ b/students/tiselko_iryna/english version/projects_eng.html
@@ -13,7 +13,7 @@
             <div class="dropdown-content">
                 <a href="./main.html">Main</a>
                 <a href="./about_eng.html">About</a>
-                <a href="./about_eng.html">Contacts</a>
+                <a href="./contacts_eng.html">Contacts</a>
             </div>
         </div>
 
