--- a/students/umienchuk_oksana/02_html/hobby/hobby.html
+++ b/students/umienchuk_oksana/02_html/hobby/hobby.html
@@ -45,10 +45,10 @@
     </section>
     <ul>
         <li>
-            <img src="../image/canoe.jpg" alt="Плавання на байдарках">
+            <img src="../image/canoe.jpg" alt="Плавання на байдарках" width="400">
         </li>
         <li>
-            <img src="../image/dance.jpg" alt="Танцювальний колектив">
+            <img src="../image/dance.jpg" alt="Танцювальний колектив" width="400">
         </li>
     </ul>
     <footer>
