--- a/students/umienchuk_oksana/02_html/project/project.html
+++ b/students/umienchuk_oksana/02_html/project/project.html
@@ -37,12 +37,11 @@
                 <h2>Контент-менеджер сайту спортивного харчування</h2>
                 <p>Січень 2013 – теперішній час</p>
                 <p><strong>Обов&rsquo;язки:</strong></p>
-                <p><strong>Обов&rsquo;язки:</strong></p>
                 <p>Адміністрування сайту через CMS Joomla</p>
                 <p>Написання тексту до карток із товарами.</p>
                 <p>Редагування верстки html-коду контенту.</p>
                 <p>Оптимізація текстів для SEO-оптимізації сайту.</p>
-                <p>Написання мета тегів до товарів.</p>
+                <p>Написання мета тегів до сторінок сайту.</p>
                 <p>Ведення email-розсилок через сервіс розсилок SendPulse.</p>
                 <p>Обробка контенту в програмі Photoshop.</p>
                 <p>Створення етикеток на добавки для українського ринку.</p>
