--- a/students/kukuruza_maxim/02_html/html/index.html
+++ b/students/kukuruza_maxim/02_html/html/index.html
@@ -3,9 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
     <title>Max Kukuruza</title>
 </head>
 <body>
-    
+    <header>
+        <img class="img-me" src="../img/me.jpg" alt="">
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Contacts</a></li>
+            </ul>
+        </nav>
+        <h1 >Max <br/> Kukuruza</h1>
+    </header>
+    <main>
+        
+    </main>
 </body>
 </html>
