--- a/students/kukuruza_maxim/02_html/html/index.html
+++ b/students/kukuruza_maxim/02_html/html/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <img class="img-me" src="../img/me.jpg" alt="">
+        
+        <h1 ><img class="img-me" src="../img/me.jpg" alt="">Max <br/> Kukuruza
+        </h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
@@ -17,10 +19,9 @@
                 <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
-        <h1 >Max <br/> Kukuruza</h1>
     </header>
     <main>
-        
+
     </main>
 </body>
 </html>
