--- a/students/kukuruza_maxim/02_html/html/index.html
+++ b/students/kukuruza_maxim/02_html/html/index.html
@@ -13,7 +13,7 @@
         </h1>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Work</a></li>
                 <li><a href="#">Contacts</a></li>
@@ -21,7 +21,16 @@
         </nav>
     </header>
     <main>
-
+        <div id="About" class="description">
+            <div class="info">
+                <p>
+                    <b>Full Stack Software Developer with an enthusiasm for technologies, solving problems and helping others. </b><br> <br>
+                    • I am experienced in Full Stack Development using JavaScript, Node, Express, React, MongoDB and Firebase. <br>
+                    • I have a Proven Track record of delivering high quality project results to various employers and managers. <br>
+                    • I am a highly competent specialist with advanced technical and leadership training, skilled at motivating teams to perform at their best to accomplish organizational goals and vision.
+                </p>
+            </div>
+        </div>
     </main>
 </body>
 </html>
