--- a/students/havrylova_kateryna/02_html/index.html
+++ b/students/havrylova_kateryna/02_html/index.html
@@ -4,10 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My profile</title>
 </head>
 
 <body>
+    <header>
+        <h1 id="up">My profile</h1>
+
+        <div>
+            <ul>
+                <li><a href="#">My education</a></li>
+                <li><a href="#">Career</a></li>
+                <li><a href="#">Hobbies</a></li>
+            </ul>
+        </div>
+
+    </header>
+    <b>Hello, my name is Kateryna Havrylova and on this page I will tell about myself</b>
+    <div>
+        <img src="/images/me.jpg" alt="">
+    </div>
+    <div>
+        <p>I'm a happy woman because I have the best family, a <a href="/career/page2.html#current_position">>good
+                job</a> (I love what I do),
+            and the opportunity to learn and grow.
+            My colleagues say that I am self-motivated, disciplined, able to work both independently and in a team,
+            have critical thinking and am not afraid to take responsibility. About myself,
+            I can say that I like to overcome difficulties, I enjoy solving complex problems,
+            I am attentive, observant, have systemic and logical thinking, time management
+            and self-organization skills, can analyze information, and I am attentive to details.
+            I can easily find a common language with people of different professions and ages.
+        </p>
+        <p>Unfortunately, February 2022 changed every Ukrainian, and I am no exception.
+            When the war started, I had to leave my home and husband in the city of Sumy
+            and move with my children to Kolomyia. </p>
+        <p>But life does not stand still, the children are getting used to the new school,
+            we have new friends, and we are integrating into the new city.
+            We try to use every opportunity to get to know the beauty of Ukraine,
+            so I often travel with my children to different places in Western Ukraine. </p>
+        <p>And sometimes I even find time to do <a href="./page3.html#cookies">something for my soul</a>, not
+            just for work. </p>
+    </div>
+    <div>
+        <ul>Contacts:</ul>
+        <ul>email: <a href="mailto:kateryna.h31@gmail.com">kateryna.h31@gmail.com</a></ul>
+        <ul>tel: +380 99 000 00 00</ul>
+    </div>
+    <div>
+        <a href="#up" travel="_blank">Up</a>
+    </div>
 
 </body>
 
