--- a/students/havrylova_kateryna/02_html/pege3.html
+++ b/students/havrylova_kateryna/02_html/pege3.html
@@ -9,14 +9,16 @@
 
 <body>
     <header>
-        <h1 id="up"><a href="#"><b>My profile</b></a></h1>
+        <h1 id="up"><a href="./index.html"><b>My profile</b></a></h1>
 
         <div>
+
             <ul>
                 <li><a href="./page1.html">My education</a></li>
                 <li><a href="./page2.html">Career</a></li>
-                <li><a href="./page3.html">Hobbies</a></li>
+                <li><a href="./pege3.html">Hobbies</a></li>
             </ul>
+
         </div>
 
     </header>
