--- a/students/havrylova_kateryna/02_html/index.html
+++ b/students/havrylova_kateryna/02_html/index.html
@@ -12,11 +12,13 @@
         <h1 id="up">My profile</h1>
 
         <div>
+
             <ul>
-                <li><a href="#">My education</a></li>
-                <li><a href="#">Career</a></li>
-                <li><a href="#">Hobbies</a></li>
+                <li><a href="./page1.html">My education</a></li>
+                <li><a href="./page2.html">Career</a></li>
+                <li><a href="./pege3.html">Hobbies</a></li>
             </ul>
+
         </div>
 
     </header>
