--- a/students/havrylova_kateryna/02_html/page1.html
+++ b/students/havrylova_kateryna/02_html/page1.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="./page1.html">My education</a></li>
                 <li><a href="./page2.html">Career</a></li>
-                <li><a href="./pege3.html">Hobbies</a></li>
+                <li><a href="./page3.html">Hobbies</a></li>
             </ul>
 
         </div>
@@ -39,13 +39,13 @@
                 <td>1999-2004</td>
                 <td>Ukrainian Academy of Banking</td>
                 <td>Master ́s degree in Finance</td>
-                <td><a href="/images/diplom1.jpg" target="_blank">Diplom with honors</a></td>
+                <td><a href="./images/diplom1.jpg" target="_blank">Diplom with honors</a></td>
             </tr>
             <tr>
                 <td>2018-2020</td>
                 <td>Sumy State University</td>
                 <td>Public management and administration</td>
-                <td><a href="/images/diplom1.jpg" target="_blank">Master ́s degree </a></td>
+                <td><a href="./images/diplom1.jpg" target="_blank">Master ́s degree </a></td>
             </tr>
         </tbody>
     </table>
@@ -63,19 +63,19 @@
         <tbody>
             <tr>
                 <td>2022</td>
-                <td><img src="/images/softserve_logo.png" alt=""></td>
+                <td><img src="./images/softserve_logo.png" alt=""></td>
                 <td>Intro to Programming</td>
-                <td><a href="/images/Certificate_SoftServe.pdf" target="_blank">CERTIFICATE</a></td>
+                <td><a href="./images/Certificate_SoftServe.pdf" target="_blank">CERTIFICATE</a></td>
             </tr>
             <tr>
                 <td>2023</td>
-                <td><img src="/images/prog_academy.png" alt=""></td>
+                <td><img src="./images/prog_academy.png" alt=""></td>
                 <td>Java Developer</td>
-                <td><a href="/images/Kateryna Havrylova.png" target="_blank">CERTIFICATE OF GRADUATION</a></td>
+                <td><a href="./images/Kateryna Havrylova.png" target="_blank">CERTIFICATE OF GRADUATION</a></td>
             </tr>
             <tr>
                 <td>now</td>
-                <td><img src="/images/beetroot_logo.png" alt=""></td>
+                <td><img src="./images/beetroot_logo.png" alt=""></td>
                 <td>Front-End Development</td>
                 <td>in processing</td>
             </tr>
