--- a/students/havrylova_kateryna/02_html/page2.html
+++ b/students/havrylova_kateryna/02_html/page2.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="./page1.html">My education</a></li>
                 <li><a href="./page2.html">Career</a></li>
-                <li><a href="./pege3.html">Hobbies</a></li>
+                <li><a href="./page3.html">Hobbies</a></li>
             </ul>
 
         </div>
@@ -29,7 +29,7 @@
             <tr>
                 <td>February 2023-now</td>
                 <td><b>Fundraiser</b>
-                    <p id="#"><i>NGO Projector</i></p>
+                    <p id="current_position"><i>NGO Projector</i></p>
                     <ul>
                         <li>searching for opportunities, researching donors, communicating with potential donors;</li>
                         <li>preparation of grant projects, development of ideas, concepts and budgets;</li>
