--- a/students/havrylova_kateryna/02_html/page3.html
+++ b/students/havrylova_kateryna/02_html/page3.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="./page1.html">My education</a></li>
                 <li><a href="./page2.html">Career</a></li>
-                <li><a href="./pege3.html">Hobbies</a></li>
+                <li><a href="./page3.html">Hobbies</a></li>
             </ul>
 
         </div>
@@ -32,11 +32,11 @@
             And before the war, we used to go to the seaside once a year,
             because the sea is love and complete relaxation.
         </p>
-        <img src="/images/hobbies/BD.jpg" alt="">
-        <img src="/images/hobbies/Danylo_river.jpg" alt="">
-        <img src="/images/hobbies/mount.jpg" alt="">
-        <img src="/images/hobbies/sky.jpg" alt="">
-        <img src="/images/hobbies/cave.jpg" alt="">
+        <img src="./images/hobbies/BD.jpg" alt="">
+        <img src="./images/hobbies/Danylo_river.jpg" alt="">
+        <img src="./images/hobbies/mount.jpg" alt="">
+        <img src="./images/hobbies/sky.jpg" alt="">
+        <img src="./images/hobbies/cave.jpg" alt="">
 
     </div>
     <div>
@@ -49,10 +49,10 @@
             When I have a little more time and inspiration, I like to cook something unusual, like baking cakes and
             decorating them.
         </p>
-        <img src="/images/hobbies/cake1.jpg" alt="">
-        <img src="/images/hobbies/cake2.jpg" alt="">
-        <img src="/images/hobbies/cake3.jpg" alt="">
-        <img src="/images/hobbies/cake4.jpg" alt="">
+        <img src="./images/hobbies/cake1.jpg" alt="">
+        <img src="./images/hobbies/cake2.jpg" alt="">
+        <img src="./images/hobbies/cake3.jpg" alt="">
+        <img src="./images/hobbies/cake4.jpg" alt="">
     </div>
     <div>
         <p>If you ask me what I love, I can say reading.
