--- a/students/havrylova_kateryna/02_html/index.html
+++ b/students/havrylova_kateryna/02_html/index.html
@@ -16,7 +16,7 @@
             <ul>
                 <li><a href="./page1.html">My education</a></li>
                 <li><a href="./page2.html">Career</a></li>
-                <li><a href="./pege3.html">Hobbies</a></li>
+                <li><a href="./page3.html">Hobbies</a></li>
             </ul>
 
         </div>
@@ -24,10 +24,10 @@
     </header>
     <b>Hello, my name is Kateryna Havrylova and on this page I will tell about myself</b>
     <div>
-        <img src="/images/me.jpg" alt="">
+        <img src="./images/me.jpg" alt="">
     </div>
     <div>
-        <p>I'm a happy woman because I have the best family, a <a href="/career/page2.html#current_position">>good
+        <p>I'm a happy woman because I have the best family, a <a href="./page2.html#current_position">good
                 job</a> (I love what I do),
             and the opportunity to learn and grow.
             My colleagues say that I am self-motivated, disciplined, able to work both independently and in a team,
