added section 1 and 2

--- a/students/hridina_anastasiia/07_figma/index.html
+++ b/students/hridina_anastasiia/07_figma/index.html
@@ -16,6 +16,23 @@
             <a href="#">Portfolio</a>
             <a href="#">Contacts</a>
         </nav>
+        <main>
+            <section>
+                <h1>Denis Novik</h1>
+                <img src="./images/jpeg-optimizer_BSPP2266x940.jpg" alt="Photo">
+            </section>
+            <section>
+                <h2>About me</h2>
+                <p>Hi, I'm Denis – UX/UI designer from Minsk.
+                    I'm interested in design and everything connected with it.
+
+                    I'm studying at courses "Web and mobile design
+                    interfaces" in IT-Academy.
+
+                    Ready to implement excellent projects
+                    with wonderful people.</p>
+            </section>
+        </main>
     </header>
 </body>
 
