added section 3 and 4

--- a/students/hridina_anastasiia/07_figma/index.html
+++ b/students/hridina_anastasiia/07_figma/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Denis Novik</title>
 </head>
 
 <body>
@@ -16,12 +16,17 @@
             <a href="#">Portfolio</a>
             <a href="#">Contacts</a>
         </nav>
-        <main>
-            <section>
+    </header>
+
+    <main>
+        <section>
+            <div>
                 <h1>Denis Novik</h1>
-                <img src="./images/jpeg-optimizer_BSPP2266x940.jpg" alt="Photo">
-            </section>
-            <section>
+                <img src="./images/jpeg-optimizer_BSPP2266x940.jpg" width="943" height="387" alt="Photo">
+            </div>
+        </section>
+        <section>
+            <div>
                 <h2>About me</h2>
                 <p>Hi, I'm Denis – UX/UI designer from Minsk.
                     I'm interested in design and everything connected with it.
@@ -30,10 +35,68 @@
                     interfaces" in IT-Academy.
 
                     Ready to implement excellent projects
-                    with wonderful people.</p>
-            </section>
-        </main>
-    </header>
+                    with wonderful people.
+                </p>
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>Skills</h2>
+                <p>I work in such programs as</p>
+                <img src="./images/Group.svg" width="89" height="87" alt="Adobe Photoshop">
+                <p>Adobe Photoshop</p>
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star (1).svg" alt="Star">
+            </div>
+            <div>
+                <img src="./images/Group (1).svg" width="89" height="87" alt="Adobe Illustrator">
+                <p>Adobe Illustrator</p>
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star (1).svg" alt="Star">
+                <img src="./images/Star (1).svg" alt="Star">
+            </div>
+            <div>
+                <img src="./images/Group (2).svg" width="89" height="87" alt="Adobe After Effects">
+                <p>Adobe After Effects</p>
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star (1).svg" alt="Star">
+            </div>
+            <div>
+                <img src="./images/Frame.png" width="58" height="88" alt="Figma">
+                <p>Figma</p>
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star.svg" alt="Star">
+                <img src="./images/Star (1).svg" alt="Star">
+            </div>
+        </section>
+        <section>
+            <div>
+                <h2>Portfolio</h2>
+                <img src="./images/jpeg-optimizer_Слой 8.jpg" width="936" height="510" alt="Online fashion store">
+                <a href="#">Online fashion store - Homepage</a>
+            </div>
+            <div>
+                <img src="./images/jpeg-optimizer_reebok_web (1).jpg" width="936" height="522" alt="Reebok store">
+                <a href="#">Reebok Store - Concept</a>
+            </div>
+            <div>
+                <img src="./images/jpeg-optimizer_reebok_web.jpg" width="936" height="522"
+                    alt="Braun portable macro camera">
+                <a href="#">Braun Landing Page - Concept</a>
+            </div>
+        </section>
+
+    </main>
 </body>
 
 </html>
