--- a/students/tiselko_iryna/07_figma/index.html
+++ b/students/tiselko_iryna/07_figma/index.html
@@ -6,6 +6,16 @@
     <title>Denis Novik </title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>About me</li>
+                <li>Skills</li>
+                <li>Portfolio</li>
+                <li>Contacts</li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
