--- a/students/tiselko_iryna/07_figma/index.html
+++ b/students/tiselko_iryna/07_figma/index.html
@@ -17,5 +17,21 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section class="hero">
+            <h1>Denis Novik</h1>
+            <img src="./images/main/BSPP2266x940.jpg" alt="Denis Novik">
+        </section>
+
+        <section>
+            <h2>About me</h2>
+            <div>
+                <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.</p>
+                <p>I'm studying at courses "Web and mobile design interfaces" in IT-Academy.</p>
+                <p>Ready to implement excellent projects with wonderful people.</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
