--- a/students/tiselko_iryna/07_figma/index.html
+++ b/students/tiselko_iryna/07_figma/index.html
@@ -32,6 +32,60 @@
                 <p>Ready to implement excellent projects with wonderful people.</p>
             </div>
         </section>
+
+        <section>
+            <h2>Skills</h2>
+            <p>I work in such programs as</p>
+            <div class="skills_container">
+                <div>
+                    <figure>
+                        <img src="./images/skills/PS.svg" alt="PS">
+                        <figcaption>Adobe<br>Photoshop</figcaption>
+                    </figure>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star_empt.svg" alt=""></span>
+                </div>
+
+                <div>
+                    <figure>
+                        <img src="./images/skills/AI.svg" alt="Ai">
+                        <figcaption>Adobe<br>Illustrator</figcaption>
+                    </figure>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star_empt.svg" alt=""></span>
+                    <span><img src="./images/skills/Star_empt.svg" alt=""></span>
+                </div>
+
+                <div>
+                    <figure>
+                        <img src="./images/skills/Group.svg" alt="AAE">
+                        <figcaption>Adobe<br>After Effects</figcaption>
+                    </figure>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star_empt.svg" alt=""></span>
+                </div>
+
+                <div>
+                    <figure>
+                        <img src="./images/skills/Frame.svg" alt="Figma">
+                        <figcaption>Figma</figcaption>
+                    </figure>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star.svg" alt=""></span>
+                    <span><img src="./images/skills/Star_empt.svg" alt=""></span>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
