--- a/students/tiselko_iryna/07_figma/index.html
+++ b/students/tiselko_iryna/07_figma/index.html
@@ -86,6 +86,25 @@
                 </div>
             </div>
         </section>
+
+        <section>
+            <h2>Portfolio</h2>
+            <figure>
+                <a href="#" target="_blank"><img src="./images/portfolio/Слой 8.jpg" alt="Online fashion store"></a>
+                <figcaption>Online fashion store -<br>Homepage</figcaption>
+            </figure>
+
+            <figure>
+                <a href="#" target="_blank"><img src="./images/portfolio/reebok_web.jpg" alt="Reebok Store"></a>
+                <figcaption>Reebok Store - Concept</figcaption>
+            </figure>
+
+            <figure>
+                <a href="#" target="_blank"><img src="./images/portfolio/3 port.jpg" alt="Braun Landing Page"></a>
+                <figcaption>Braun Landing Page - Concept</figcaption>
+            </figure>
+        </section>
+
     </main>
 </body>
 </html>
