--- a/students/hridina_anastasiia/07_figma/index.html
+++ b/students/hridina_anastasiia/07_figma/index.html
@@ -95,6 +95,27 @@
                 <a href="#">Braun Landing Page - Concept</a>
             </div>
         </section>
+        <footer>
+            <div>
+                <h2>Contacts</h2>
+                <p>Want to know more or just chat?
+                    You are welcome!</p>
+                <button type="button">Send message</button>
+            </div>
+            <div>
+                <a href="#"><img src="./images/Group 2.svg" alt="LinkedIn"></a>
+                <a href="#"><img src="./images/surface1 6.svg" alt="Instagram"></a>
+                <a href="#"><img src="./images/behance.svg" alt="Behance"></a>
+                <a href="#"><img src="./images/surface1 7.svg" alt="Dribble"></a>
+            </div>
+            <div>
+                <p>
+                    Like me on
+                    LinkedIn, Instagram, Behance,
+                    Dribble
+                </p>
+            </div>
+        </footer>
 
     </main>
 </body>
