--- a/students/tiselko_iryna/07_figma/index.html
+++ b/students/tiselko_iryna/07_figma/index.html
@@ -24,7 +24,7 @@
             <img src="./images/main/BSPP2266x940.jpg" alt="Denis Novik">
         </section>
 
-        <section>
+        <section class="about">
             <h2>About me</h2>
             <div>
                 <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.</p>
@@ -33,7 +33,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="skills">
             <h2>Skills</h2>
             <p>I work in such programs as</p>
             <div class="skills_container">
@@ -87,7 +87,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="portfolio">
             <h2>Portfolio</h2>
             <figure>
                 <a href="#" target="_blank"><img src="./images/portfolio/Слой 8.jpg" alt="Online fashion store"></a>
@@ -104,7 +104,19 @@
                 <figcaption>Braun Landing Page - Concept</figcaption>
             </figure>
         </section>
-
     </main>
+
+    <footer>
+        <h2>Contacts</h2>
+        <p>Want to know more or just chat?<br>You are welcome!</p>
+        <button>Send message</button>
+        <div>
+            <a href="https://www.linkedin.com/" target="_blank"><img src="./images/contacts/Group 2.svg" alt="linkedin"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./images/contacts/surface1 6.svg" alt="instagram"></a>
+            <a href="https://www.behance.net/" target="_blank"><img src="./images/contacts/behance.svg" alt="behance"></a>
+            <a href="https://dribbble.com/" target="_blank"><img src="./images/contacts/surface1 7.svg" alt="dribble"></a>
+        </div>
+        <p>Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
+    </footer>
 </body>
 </html>
