--- a/students/tiselko_iryna/07_figma/index.html
+++ b/students/tiselko_iryna/07_figma/index.html
@@ -9,22 +9,22 @@
     <header>
         <nav>
             <ul>
-                <li>Home</li>
-                <li>About me</li>
-                <li>Skills</li>
-                <li>Portfolio</li>
-                <li>Contacts</li>
+                <li><a href="#hero">Home</a></li>
+                <li><a href="#about">About me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contacts">Contacts</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section class="hero">
+        <section id="hero">
             <h1>Denis Novik</h1>
             <img src="./images/main/BSPP2266x940.jpg" alt="Denis Novik">
         </section>
 
-        <section class="about">
+        <section id="about">
             <h2>About me</h2>
             <div>
                 <p>Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.</p>
@@ -33,7 +33,7 @@
             </div>
         </section>
 
-        <section class="skills">
+        <section id="skills">
             <h2>Skills</h2>
             <p>I work in such programs as</p>
             <div class="skills_container">
@@ -87,7 +87,7 @@
             </div>
         </section>
 
-        <section class="portfolio">
+        <section id="portfolio">
             <h2>Portfolio</h2>
             <figure>
                 <a href="#" target="_blank"><img src="./images/portfolio/Слой 8.jpg" alt="Online fashion store"></a>
@@ -107,7 +107,7 @@
     </main>
 
     <footer>
-        <h2>Contacts</h2>
+        <h2 id="contacts">Contacts</h2>
         <p>Want to know more or just chat?<br>You are welcome!</p>
         <button>Send message</button>
         <div>
