add main styles

--- a/students/tiselko_iryna/07_figma/index.html
+++ b/students/tiselko_iryna/07_figma/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Denis Novik </title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#hero">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#about">About me</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
@@ -19,7 +21,7 @@
     </header>
 
     <main>
-        <section id="hero">
+        <section id="home">
             <h1>Denis Novik</h1>
             <img src="./images/main/BSPP2266x940.jpg" alt="Denis Novik">
         </section>
@@ -91,17 +93,18 @@
             <h2>Portfolio</h2>
             <figure>
                 <a href="#" target="_blank"><img src="./images/portfolio/Слой 8.jpg" alt="Online fashion store"></a>
-                <figcaption>Online fashion store -<br>Homepage</figcaption>
+                <figcaption class="portfolio_text">Online fashion store -<br>Homepage</figcaption>
             </figure>
 
             <figure>
                 <a href="#" target="_blank"><img src="./images/portfolio/reebok_web.jpg" alt="Reebok Store"></a>
-                <figcaption>Reebok Store - Concept</figcaption>
+                <figcaption class="portfolio_text">Reebok Store - Concept</figcaption>
             </figure>
 
             <figure>
                 <a href="#" target="_blank"><img src="./images/portfolio/3 port.jpg" alt="Braun Landing Page"></a>
-                <figcaption>Braun Landing Page - Concept</figcaption>
+                <figcaption class="portfolio_text">Reebok Store - Concept</figcaption>
+                <figcaption >Braun Landing Page - Concept</figcaption>
             </figure>
         </section>
     </main>
