--- a/students/linov_mykhailo/07_figma/index.html
+++ b/students/linov_mykhailo/07_figma/index.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Denis Novik</title>
 </head>
 
 <body>
-    <header>
+    <header id="home">
         <ul>
-            <li>Home</li>
-            <li>About me</li>
-            <li>Skills</li>
-            <li>Portfolio</li>
-            <li>Contacts</li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about_me">About me</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#contacts">Contacts</a></li>
         </ul>
     </header>
     <main>
@@ -22,53 +22,53 @@
             <h1>Denis Novik</h1>
             <img src="img/jpg/denis_novik.jpeg" alt="Denis Novik" title="Denis Novik" />
         </section>
-        <section>
+        <section id="about_me">
             <h2>About me</h2>
             <p>Hi, I'm Denis - UX/UI designer from Minsk. I'm interested in design and everything connected with it.</p>
             <p>I'm studying at courses "Web and mobile design interfaces" in IT-Academy.</p>
             <p>Ready to implement excellent projects with wonderful people.</p>
         </section>
-        <section>
+        <section id="skills">
             <h2>Skills</h2>
             <p>I work in such programs as</p>
             <div>
-                <img src="img/svg/PS.svg" alt="Adobe Photoshop" title="Adobe Photoshop" />
+                <img src="img/svg/ps.svg" alt="Adobe Photoshop" title="Adobe Photoshop" />
                 <p>Adobe Photoshop</p>
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star (1).svg" alt="grey star" title="grey star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star_grey.svg" alt="grey star" title="grey star" />
             </div>
             <div>
                 <img src="img/svg/AI.svg" alt="Adobe Illustrator" title="Adobe Illustrator" />
                 <p>Adobe Illustrator</p>
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star (1).svg" alt="grey star" title="grey star" />
-                <img src="img/svg/Star (1).svg" alt="grey star" title="grey star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star_grey.svg" alt="grey star" title="grey star" />
+                <img src="img/svg/star_grey.svg" alt="grey star" title="grey star" />
             </div>
             <div>
                 <img src="img/svg/AE.svg" alt="Adobe After Effects" title="Adobe After Effects" />
                 <p>Adobe After Effects</p>
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star (1).svg" alt="grey star" title="grey star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star_grey.svg" alt="grey star" title="grey star" />
             </div>
             <div>
                 <img src="img/svg/Figma.svg" alt="Figma" title="Figma" />
                 <p>Figma</p>
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star.svg" alt="black star" title="black star" />
-                <img src="img/svg/Star (1).svg" alt="grey star" title="grey star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star.svg" alt="black star" title="black star" />
+                <img src="img/svg/star_grey.svg" alt="grey star" title="grey star" />
             </div>
         </section>
-        <section>
+        <section id="portfolio">
             <h2>Portfolio</h2>
             <div>
                 <a href="" target="_blank"><img src="img/jpg/store.jpeg" alt="Online fashion store - Homepage"
@@ -87,7 +87,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="contacts">
         <h2>Contacts</h2>
         <p>Want to know more or just chat? You are welcome!</p>
         <button>Send message</button>
