--- a/students/linov_mykhailo/07_figma/index.html
+++ b/students/linov_mykhailo/07_figma/index.html
@@ -41,7 +41,7 @@
                 <img src="img/svg/star_grey.svg" alt="grey star" title="grey star" />
             </div>
             <div>
-                <img src="img/svg/AI.svg" alt="Adobe Illustrator" title="Adobe Illustrator" />
+                <img src="img/svg/ai.svg" alt="Adobe Illustrator" title="Adobe Illustrator" />
                 <p>Adobe Illustrator</p>
                 <img src="img/svg/star.svg" alt="black star" title="black star" />
                 <img src="img/svg/star.svg" alt="black star" title="black star" />
@@ -50,7 +50,7 @@
                 <img src="img/svg/star_grey.svg" alt="grey star" title="grey star" />
             </div>
             <div>
-                <img src="img/svg/AE.svg" alt="Adobe After Effects" title="Adobe After Effects" />
+                <img src="img/svg/ae.svg" alt="Adobe After Effects" title="Adobe After Effects" />
                 <p>Adobe After Effects</p>
                 <img src="img/svg/star.svg" alt="black star" title="black star" />
                 <img src="img/svg/star.svg" alt="black star" title="black star" />
@@ -59,7 +59,7 @@
                 <img src="img/svg/star_grey.svg" alt="grey star" title="grey star" />
             </div>
             <div>
-                <img src="img/svg/Figma.svg" alt="Figma" title="Figma" />
+                <img src="img/svg/figma.svg" alt="Figma" title="Figma" />
                 <p>Figma</p>
                 <img src="img/svg/star.svg" alt="black star" title="black star" />
                 <img src="img/svg/star.svg" alt="black star" title="black star" />
