add tag nav to menu

--- a/students/linov_mykhailo/07_figma/index.html
+++ b/students/linov_mykhailo/07_figma/index.html
@@ -9,13 +9,15 @@
 
 <body>
     <header id="home">
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about_me">About me</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contacts">Contacts</a></li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about_me">About me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
